--- a/notebooks/test_Cim_partitioning.ipynb
+++ b/notebooks/test_Cim_partitioning.ipynb
@@ -6,10 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import time\n",
+    "import numpy as np\n",
+    "from qboard.cimsim.cimsim import CIMSim\n",
+    "from qboard.cimsim import tuner\n",
+    "import qboard\n",
+    "import qboard.cache\n",
+    "from qboard.translators import markowitz\n",
+    "from qboard import qubo\n",
+    "\n",
     "import os\n",
-    "os.chdir('/home/koritskiy/Yandex.Disk/Personal/RQC/Markowitz_partitioning')\n",
+    "os.chdir('/home/koritskiy/rqc/Markowitz_partitioning')\n",
     "os.getcwd()\n",
     "from modules.partitioning import Partitioning"
    ]
@@ -29,198 +36,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "block_dim = 344\n",
+    "\n",
+    "\n",
+    "# define the file path\n",
+    "def path(name):\n",
+    "    return f\"/home/koritskiy/rqc/Markowitz_partitioning/data/test_matrices/{block_dim}/{name}{block_dim}.csv\"\n",
+    "\n",
+    "\n",
+    "# download matrices\n",
+    "block_mat = np.genfromtxt(path(\"block_mat\"), delimiter=\",\")\n",
+    "mix_permutation_mat = np.genfromtxt(path(\"mix_permutation_mat\"), delimiter=\",\")\n",
+    "mixed_mat = np.genfromtxt(path(\"mixed_mat\"), delimiter=\",\")\n",
+    "\n",
+    "# Create object of partitioning task\n",
+    "part = Partitioning(mixed_mat, theta=50)\n",
+    "bqm = part.bqm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q = part.qubo_mat\n",
+    "h, J = qubo.toising(Q)\n",
+    "solutions = qboard.cache.Solutions()\n",
+    "# if (h, J) in solutions:\n",
+    "#     spins_ising = [1 if _ else -1 for _ in solutions[h, J]]\n",
+    "#     energy_ising = qubo.ienergy(h, J, spins_ising)\n",
+    "# else:\n",
+    "params = qboard.cache.Parameters()\n",
+    "if not params[h, J]:\n",
+    "    params[h, J] = tuner.optimize(h, J)\n",
+    "cimsim = CIMSim(J, h.reshape(-1, 1), device='cpu')\n",
+    "cimsim.set_params({'c_th':1., 'zeta':1., 'init_coupling':0.3, 'final_coupling':1., 'N':1000, 'attempt_num':10000, **params[h, J]})\n",
+    "(spins_ising, energy_ising, c_current, c_evol) = cimsim.find_opt()\n",
+    "solutions[h, J] = spins_ising\n",
+    "print('Im done')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Given random block matrix:\n",
-      "[[0.815 0.509 0.307 0.    0.    0.    0.    0.    0.   ]\n",
-      " [0.509 0.795 0.579 0.    0.    0.    0.    0.    0.   ]\n",
-      " [0.307 0.579 0.908 0.    0.    0.    0.    0.    0.   ]\n",
-      " [0.    0.    0.    0.806 0.535 0.394 0.    0.    0.   ]\n",
-      " [0.    0.    0.    0.535 0.867 0.59  0.    0.    0.   ]\n",
-      " [0.    0.    0.    0.394 0.59  0.762 0.    0.    0.   ]\n",
-      " [0.    0.    0.    0.    0.    0.    0.982 0.559 0.453]\n",
-      " [0.    0.    0.    0.    0.    0.    0.559 0.769 0.671]\n",
-      " [0.    0.    0.    0.    0.    0.    0.453 0.671 0.969]]\n",
+      "Solution permutation matrix:\n",
+      "[[0 1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1 0]\n",
+      " [0 0 0 0 0 0 0 1 0 0 0]\n",
+      " [0 0 0 0 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 0 0 0 0]\n",
+      " [0 0 1 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 1 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 1 0 0 0 0 0]]\n",
       "\n",
       "\n",
-      "Random permutation matrix:\n",
-      "[[1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
-      " [0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 1.]]\n",
-      "\n",
-      "\n",
-      "Mixed matrix\n",
-      "[[0.815 0.    0.    0.307 0.    0.509 0.    0.    0.   ]\n",
-      " [0.    0.769 0.    0.    0.    0.    0.559 0.    0.671]\n",
-      " [0.    0.    0.806 0.    0.535 0.    0.    0.394 0.   ]\n",
-      " [0.307 0.    0.    0.908 0.    0.579 0.    0.    0.   ]\n",
-      " [0.    0.    0.535 0.    0.867 0.    0.    0.59  0.   ]\n",
-      " [0.509 0.    0.    0.579 0.    0.795 0.    0.    0.   ]\n",
-      " [0.    0.559 0.    0.    0.    0.    0.982 0.    0.453]\n",
-      " [0.    0.    0.394 0.    0.59  0.    0.    0.762 0.   ]\n",
-      " [0.    0.671 0.    0.    0.    0.    0.453 0.    0.969]]\n",
+      "\u001b[93mSolution is not permutation matrix. Trying to fix it\u001b[0m\n",
+      "\u001b[93mNumber of wrong lines:\u001b[0m\n",
+      "\u001b[93m2\u001b[0m\n",
+      "\u001b[93mSuccess!\u001b[0m\n",
+      "Solution matrix after fixing:\n",
+      "[[0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]]\n",
+      "Ordered matrix:\n",
+      "[[0.926 0.377 0.582 0.    0.    0.    0.    0.    0.761 0.    0.   ]\n",
+      " [0.377 0.809 0.602 0.    0.    0.    0.    0.    0.465 0.    0.   ]\n",
+      " [0.582 0.602 0.812 0.    0.    0.    0.    0.    0.693 0.    0.   ]\n",
+      " [0.    0.    0.    0.945 0.723 0.769 0.557 0.    0.    0.    0.   ]\n",
+      " [0.    0.    0.    0.723 0.949 0.407 0.799 0.    0.    0.    0.   ]\n",
+      " [0.    0.    0.    0.769 0.407 0.898 0.232 0.    0.    0.    0.   ]\n",
+      " [0.    0.    0.    0.557 0.799 0.232 0.975 0.    0.    0.    0.   ]\n",
+      " [0.    0.    0.    0.    0.    0.    0.    0.926 0.    0.727 0.661]\n",
+      " [0.761 0.465 0.693 0.    0.    0.    0.    0.    0.894 0.    0.   ]\n",
+      " [0.    0.    0.    0.    0.    0.    0.    0.727 0.    0.771 0.47 ]\n",
+      " [0.    0.    0.    0.    0.    0.    0.    0.661 0.    0.47  0.836]]\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "block_dim = [3,3,3]\n",
-    "block_mat = \n",
-    "mixed_mat =\n",
-    "mix_permutation_mat = \n",
-    "part = Partitioning(mixed_mat, theta = 50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "if (!(\"Notification\" in window)) {\n",
-       "    alert(\"This browser does not support desktop notifications, so the %%notify magic will not work.\");\n",
-       "} else if (Notification.permission !== 'granted' && Notification.permission !== 'denied') {\n",
-       "    Notification.requestPermission(function (permission) {\n",
-       "        if(!('permission' in Notification)) {\n",
-       "            Notification.permission = permission;\n",
-       "        }\n",
-       "    })\n",
-       "}\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%load_ext jupyternotify"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CIM starts\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-cbaf29789dc8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"CIM starts\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mstart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolution\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpart\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcim_solver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0mend_cim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"CIM ends\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Yandex.Disk/Personal/RQC/Markowitz_partitioning/modules/binary_problem.py\u001b[0m in \u001b[0;36mcim_solver\u001b[0;34m(self, params)\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[0mcimsim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCIMSim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mJmatrix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhvector\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"cpu\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m         \u001b[0mcimsim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 78\u001b[0;31m         \u001b[0;34m(\u001b[0m\u001b[0mspins_ising\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menergy_ising\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_current\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_evol\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcimsim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_opt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m         \u001b[0;31m# Print solution as permutation matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Yandex.Disk/Personal/RQC/Markowitz_partitioning/modules/cimsim.py\u001b[0m in \u001b[0;36mfind_opt\u001b[0;34m(self, callback)\u001b[0m\n\u001b[1;32m    198\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfind_opt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallback\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime_current\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 200\u001b[0;31m         \u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_evol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mH_opt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc_opt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcallback\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    201\u001b[0m         \u001b[0mspins_current\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc_opt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    202\u001b[0m         \u001b[0mspins_ising\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Yandex.Disk/Personal/RQC/Markowitz_partitioning/modules/cimsim.py\u001b[0m in \u001b[0;36mevolve\u001b[0;34m(self, callback)\u001b[0m\n\u001b[1;32m    173\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    174\u001b[0m             \u001b[0;31m# updating c\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 175\u001b[0;31m             \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtanh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mdc_momentum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    176\u001b[0m             \u001b[0mspins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msign\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m             \u001b[0mH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m0.5\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meinsum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ij,ik,jk->k'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mJ\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspins\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meinsum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ij,ik->k'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moffset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "$(document).ready(\n",
-       "    function() {\n",
-       "        function appendUniqueDiv(){\n",
-       "            // append a div with our uuid so we can check that it's already\n",
-       "            // been sent and avoid duplicates on page reload\n",
-       "            var notifiedDiv = document.createElement(\"div\")\n",
-       "            notifiedDiv.id = \"26201f77-349a-40b6-ab78-3283e69f2d88\"\n",
-       "            element.append(notifiedDiv)\n",
-       "        }\n",
-       "\n",
-       "        // only send notifications if the pageload is complete; this will\n",
-       "        // help stop extra notifications when a saved notebook is loaded,\n",
-       "        // which during testing gives us state \"interactive\", not \"complete\"\n",
-       "        if (document.readyState === 'complete') {\n",
-       "            // check for the div that signifies that the notification\n",
-       "            // was already sent\n",
-       "            if (document.getElementById(\"26201f77-349a-40b6-ab78-3283e69f2d88\") === null) {\n",
-       "                var notificationPayload = {\"requireInteraction\": false, \"icon\": \"/static/base/images/favicon.ico\", \"body\": \"Cell execution has finished!\"};\n",
-       "                if (Notification.permission !== 'denied') {\n",
-       "                    if (Notification.permission !== 'granted') { \n",
-       "                        Notification.requestPermission(function (permission) {\n",
-       "                            if(!('permission' in Notification)) {\n",
-       "                                Notification.permission = permission\n",
-       "                            }\n",
-       "                        })\n",
-       "                    }\n",
-       "                    if (Notification.permission === 'granted') {\n",
-       "                    var notification = new Notification(\"Jupyter Notebook\", notificationPayload)\n",
-       "                    appendUniqueDiv()\n",
-       "                    notification.onclick = function () {\n",
-       "                        window.focus();\n",
-       "                        this.close();\n",
-       "                        };\n",
-       "                    } \n",
-       "                }     \n",
-       "            }\n",
-       "        }\n",
-       "    }\n",
-       ")\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%notify\n",
-    "\n",
-    "params = {'c_th': 1.,\n",
-    "          'zeta': 1.,\n",
-    "          'init_coupling': 0.3,\n",
-    "          'final_coupling': 1.,\n",
-    "          'N': 1000,\n",
-    "          'attempt_num': 30000,\n",
-    "          'dt': 0.0019,\n",
-    "          'sigma': 695.891,\n",
-    "          'alpha': 0.9928,\n",
-    "          'S': 1.1689,\n",
-    "          'D': -163.423,\n",
-    "          'O': 0.8966}\n",
-    "print(\"CIM starts\")\n",
-    "start = time.time()\n",
-    "_, solution = part.cim_solver(params=params)\n",
-    "end_cim = time.time()\n",
-    "print(\"CIM ends\")\n",
-    "print(end_cim - start)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "solution = np.array([int((i+1)/2) for i in spins_ising])\n",
     "part.permutation_mat = part.list_to_mat(solution)\n",
     "print(\"Solution permutation matrix:\")\n",
     "print(part.permutation_mat)\n",
@@ -271,7 +191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (markowitz_partitioning)",
+   "display_name": "Python(markowitz_partitioning)",
    "language": "python",
    "name": "markowitz_partitioning"
   },
@@ -285,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
