--- a/notebooks/test_kerberos_partitioning.ipynb
+++ b/notebooks/test_kerberos_partitioning.ipynb
@@ -422,9 +422,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (markowitz_partitioning)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "markowitz_partitioning"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
